--- a/src/components/AgencyContactForm.astro
+++ b/src/components/AgencyContactForm.astro
@@ -12,7 +12,7 @@ import Input from './subcomponents/Input.astro';
         </div>
       </div>
       <div class="flex flex-col gap-24">
-        <div class="flex flex-col gap-10 text-justify">
+        <div class="flex flex-col gap-10">
           <p class="font-larken text-3xl">DEMANDE D’INFORMATIONS</p>
           <div class="flex flex-col gap-5">
             <p>
@@ -23,7 +23,7 @@ import Input from './subcomponents/Input.astro';
         </div>
         <div class="flex flex-col gap-10">
           <p class="font-larken text-3xl">HORAIRES & ADRESSE</p>
-          <div class="flex flex-col gap-5 text-justify">
+          <div class="flex flex-col gap-5">
             <p>Du lundi au vendredi <br /> 9:00 - 12:00 | 14:00 - 18:30</p>
             <p>148 Grand Rue<br />46500 ALVIGNAC, LOT (46)</p>
           </div>
