--- a/src/components/AgencyServices.astro
+++ b/src/components/AgencyServices.astro
@@ -6,7 +6,7 @@ const services: Service[] = [
     title: 'SUPPORTS IMPRIMÉS',
     buttonLink: '/services/supports-imprimes',
     description: [
-      'papeterie | étiquette | packaging | enseigne | signalétique | marquage vehicule & vitrine | documents professionnels | goodies',
+      'papeterie | étiquette | packaging | enseigne | signalétique | marquage véhicule & vitrine | documents professionnels | goodies',
     ],
     number: '01',
     subtitle: 'adaptés à vos besoins.',
