--- a/src/components/subcomponents/LastProject.astro
+++ b/src/components/subcomponents/LastProject.astro
@@ -31,7 +31,7 @@ const { image, title, description } = Astro.props;
           <div class="float-left mr-1">
             <GuillemetsIcon />
           </div>
-          <p class="pr-4 font-poppins text-justify">{description}</p>
+          <p class="pr-4 font-poppins">{description}</p>
         </div>
       )
     }
