--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -26,15 +26,15 @@ import SubFooter from './SubFooter.astro';
     <div class="flex justify-center gap-8 xl:max-w-2xl flex-wrap max-md:items-center max-md:text-center">
       <div class="flex select-none flex-col gap-3 w-[200px]">
         <p class="font-larken">LES SERVICES</p>
-        <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
-        <a href="/services/site-web" class="hover:text-marron_fonce">SITE WEB VITRINE</a>
+        <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORTS IMPRIMÉS</a>
+        <a href="/services/site-web" class="hover:text-marron_fonce">SUPPORT WEB</a>
         <a href="/services/identite-visuelle" class="hover:text-marron_fonce">IDENTITÉ VISUELLE</a>
         <a href="/services/contenu-digital" class="hover:text-marron_fonce">CONTENU DIGITAL</a>
         <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
       </div>
       <div class="flex flex-col gap-3 select-none w-[200px]">
         <p class="font-larken">EN SAVOIR PLUS</p>
-        <a href="/a-propos" class="hover:text-marron_fonce">L'ATELIER</a>
+        <a href="/a-propos" class="hover:text-marron_fonce">À PROPOS</a>
         <a href="/contact" class="hover:text-marron_fonce">CONTACT</a>
       </div>
       <div class="flex flex-col gap-3 w-[200px]">
