--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -27,7 +27,7 @@ const PostsInstagram = [
   <div class="flex w-full max-w-7xl flex-col gap-7">
     <div class="grid grid-cols-1 xl:grid-cols-3 gap-4 px-10 items-center">
       <div class="flex flex-col items-center text-center">
-        <div class="font-larken text-3xl flex gap-2 flex-wrap justify-center">
+        <div class="font-larken text-3xl flex gap-x-2 flex-wrap justify-center">
           <p>suivre toute</p>
           <p>l'actualité jolilot</p>
         </div>
