--- a/src/pages/services/identite-visuelle.astro
+++ b/src/pages/services/identite-visuelle.astro
@@ -27,7 +27,7 @@ const oneService: OneService = {
   number: '03',
   title: 'IDENTITÉ DE MARQUE',
   subtitle: 'une idéntité qui vous ressemble...',
-  description: ['logo vectoriel | charte graphique refonte identité visuelle'],
+  description: ['identité visuelle | logotype | charte graphique | refonte identité visuelle'],
   benefits: [
     {
       title: 'CRÉATION IDENTITÉ VISUELLE',
