--- a/src/pages/services/supports-imprimes.astro
+++ b/src/pages/services/supports-imprimes.astro
@@ -46,7 +46,7 @@ const oneService: OneService = {
       time: '2 à 5 semaines',
     },
     {
-      title: 'MARQUAGE VITRINE / VEHICULE',
+      title: 'MARQUAGE VITRINE / VÉHICULE',
       description: [
         'Suivant la nature de votre activité, l’identification visuelle de votre vitrine ou de votre véhicule peut s’avérer essentielle dans votre stratégie de communication.',
         'C’est précisément pour cette raison que Jolilot met à votre disposition ce service, visant à personnaliser au mieux votre projet.',
@@ -54,7 +54,7 @@ const oneService: OneService = {
       time: '1 à 3 semaines',
     },
     {
-      title: 'ETIQUETTE / PACKAGING',
+      title: 'ÉTIQUETTE / PACKAGING',
       description: [
         'Un packaging de qualité requiert une conception soignée et attrayante',
         'Il doit être le reflet fidèle de votre identité et de vos valeurs, tout en jouant un rôle crucial pour mettre en évidence vos produits.',
