--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -9,15 +9,41 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
   >
     <a href="/" aria-label="Retour a la page d'accueil"><LogoIcon classes="md:w-[150px] w-[100px] py-10" /></a>
     <div class="flex gap-10 max-md:hidden text-sm">
-      <a href="/a-propos" class="hover:text-orange">L'ATELIER</a>
+      <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
       <div class="relative">
-        <button id="open-close-services" class="hover:text-orange cursor-pointer">SERVICES</button>
+        <button id="open-close-services" class="hover:text-orange cursor-pointer flex gap-2 items-center"
+          >SERVICES
+          <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 256 256"
+            enable-background="new 0 0 256 256"
+            xml:space="preserve"
+            width="10px"
+            height="10px"
+            class="rotate-180"
+          >
+            <g
+              ><g
+                ><g
+                  ><path
+                    fill="currentColor"
+                    d="M66.5,120.3c-44.1,44.1-56.1,56.4-56.4,58c-0.5,2.3,1,5.7,2.9,6.7c0.7,0.3,2.4,0.6,3.8,0.6c2.4,0,3.8-1.4,55.3-52.9L125,80l55.8,55.8c51.3,51.3,56,55.8,57.9,55.8c1.2,0,2.9-0.4,4-0.9c2.7-1.4,4.2-5.8,2.7-8.1c-0.3-0.5-26.9-27.3-59.2-59.5c-58.3-58.3-58.7-58.7-61.2-58.7C122.4,64.4,122.1,64.7,66.5,120.3z"
+                  ></path></g
+                ></g
+              ></g
+            >
+          </svg>
+        </button>
         <div id="services-dropdown" class="hidden">
           <div
             class="absolute bg-orange whitespace-nowrap flex flex-col py-5 px-5 gap-1 text-background -translate-x-5 top-full translate-y-[58px]"
           >
-            <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
-            <a href="/services/site-web" class="hover:text-marron_fonce">SITE WEB VITRINE</a>
+            <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORTS IMPRIMÉS</a>
+            <a href="/services/site-web" class="hover:text-marron_fonce">SUPPORT WEB</a>
             <a href="/services/identite-visuelle" class="hover:text-marron_fonce">IDENTITÉ DE MARQUE</a>
             <a href="/services/contenu-digital" class="hover:text-marron_fonce">CONTENU DIGITAL</a>
             <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
@@ -31,7 +57,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
         aria-label="Ma page instagram @jolilot.atelier"
         target="_blank"
         referrerpolicy="no-referrer"
-        class="text-orange ml-9 hover:text-marron_fonce">PROJETS</a
+        class="text-orange ml-9 hover:text-marron_fonce font-normal">PROJETS</a
       >
     </div>
     <button
@@ -53,14 +79,14 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
     </button>
     <div id="mobile-menu-container" class="hidden fixed z-50 top-0 bottom-0 left-0 right-0 bg-background">
       <div class="flex flex-col items-center justify-center h-full gap-6">
-        <a href="/a-propos" class="hover:text-orange">L'ATELIER</a>
+        <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
         <div class="group relative">
           <button class="hover:text-orange cursor-pointer">SERVICES</button>
           <div
             class="absolute group-hover:flex hidden bg-orange whitespace-nowrap flex-col py-5 px-5 gap-1 text-background left-1/2 -translate-x-1/2"
           >
-            <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
-            <a href="/services/site-web" class="hover:text-marron_fonce">SITE WEB VITRINE</a>
+            <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORTS IMPRIMÉS</a>
+            <a href="/services/site-web" class="hover:text-marron_fonce">SUPPORT WEB</a>
             <a href="/services/identite-visuelle" class="hover:text-marron_fonce">IDENTITÉ DE MARQUE</a>
             <a href="/services/contenu-digital" class="hover:text-marron_fonce">CONTENU DIGITAL</a>
             <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
