--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content="Jolilot Atelier" />
-    <title>{title ? `${title} - JOLILOT Atelier` : 'JOLILOT Atelier | Agence créative'}</title>
+    <title>{title ? `${title} | JOLILOT ATELIER` : 'JOLILOT ATELIER | Agence créative'}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.css" />
   </head>
   <body class="flex flex-col bg-background font-extralight text-xs">
