--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -6,7 +6,7 @@ import SubFooter from './SubFooter.astro';
 ---
 
 <div>
-  <div class="grid w-full items-center bg-orange pb-10 md:pt-10 pt-20 text-white/80 md:grid-cols-2">
+  <div class="grid w-full items-center bg-orange pb-10 md:pt-10 pt-20 text-white/80 md:grid-cols-2 font-light">
     <div class="relative flex h-full items-center justify-center max-md:row-start-2">
       <a href="/" aria-label="Retour a la page d'accueil">
         <LogoIcon classes="max-w-[190px] w-[190px] min-w-[190px] py-20" /></a
@@ -25,7 +25,7 @@ import SubFooter from './SubFooter.astro';
 
     <div class="flex justify-center gap-8 xl:max-w-2xl flex-wrap max-md:items-center max-md:text-center">
       <div class="flex select-none flex-col gap-3 w-[200px]">
-        <p class="font-larken">LES SERVICES</p>
+        <p class="font-larken font-normal">LES SERVICES</p>
         <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORTS IMPRIMÉS</a>
         <a href="/services/site-web" class="hover:text-marron_fonce">SUPPORT WEB</a>
         <a href="/services/identite-visuelle" class="hover:text-marron_fonce">IDENTITÉ VISUELLE</a>
@@ -33,12 +33,12 @@ import SubFooter from './SubFooter.astro';
         <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
       </div>
       <div class="flex flex-col gap-3 select-none w-[200px]">
-        <p class="font-larken">EN SAVOIR PLUS</p>
+        <p class="font-larken font-normal">EN SAVOIR PLUS</p>
         <a href="/a-propos" class="hover:text-marron_fonce">À PROPOS</a>
         <a href="/contact" class="hover:text-marron_fonce">CONTACT</a>
       </div>
       <div class="flex flex-col gap-3 w-[200px]">
-        <p class="font-larken">HORAIRES & ADRESSE</p>
+        <p class="font-larken font-normal">HORAIRES & ADRESSE</p>
         <div class="flex gap-y-5 flex-col">
           <div>
             <p>Du lundi au vendredi</p>
