--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -82,7 +82,7 @@ const Steps: AgencyStepsProps = {
 
 <Layout title="L'Atelier">
   <main>
-    <TypingTitle />
+    <TypingTitle text="les inspirations Jolilot, c'est vous !" />
     <AgencyPresentation {...presentation} />
     <AgencyLocation />
     <AgencySteps {...Steps} submark={false} />
