--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,7 +19,7 @@ const presentation: Props = {
 
 <Layout title="Contact">
   <main>
-    <TypingTitle />
+    <TypingTitle text="donnons vie à vos idées" />
     <AgencyPresentation {...presentation} />
     <AgencyContactForm />
     <AgencyClientsNumber variant="dark" zone="bottom" />
