--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,7 +75,7 @@ const PhotoCarrousel = [
 
 <Layout>
   <main>
-    <TypingTitle />
+    <TypingTitle text="votre agence créative lotoise" />
     <AgencyPresentation {...presentation} />
     <AgencyServices />
     <PhotosCarrousel photos={PhotoCarrousel} />
