--- a/src/pages/services/conseil-suivi.astro
+++ b/src/pages/services/conseil-suivi.astro
@@ -99,7 +99,7 @@ const PhotoCarrousel = [
 
 <Layout title="Conseil & Suivi">
   <main>
-    <TypingTitle />
+    <TypingTitle text='faisons naître vos idées' />
     <AgencyPresentation {...presentation} />
     <AgencyOneService oneService={oneService} />
     <AgencySteps {...Steps} />
