--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,8 +27,9 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content="Jolilot Atelier" />
-    <title>{title ? `${title} | JOLILOT ATELIER` : 'JOLILOT ATELIER | Agence créative'}</title>
+    <title>{title ? `${title} | JOLILOT ATELIER` : 'JOLILOT ATELIER | Agence de communication digitale & print'}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.6.0/css/glide.core.css" />
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
   </head>
   <body class="flex flex-col bg-background font-extralight text-xs">
     <Header />
