--- a/src/components/AgencyContactForm.astro
+++ b/src/components/AgencyContactForm.astro
@@ -124,9 +124,9 @@ import Input from './subcomponents/Input.astro';
 
   <div class="fixed inset-0 z-40 w-screen overflow-y-auto h-screen">
     <div
-      class="calendly-inline-widget"
+      class="calendly-inline-widget absolute top-0 right-0"
       data-url="https://calendly.com/jolilotatelier?hide_gdpr_banner=1"
-      style="min-width:320px; height:100%; padding-top: 100px;"
+      style="min-width:320px; height:90%; padding-top: 64px;"
     >
     </div>
 
