fix: error with carroussel

--- a/src/components/AgencyContactForm.astro
+++ b/src/components/AgencyContactForm.astro
@@ -203,7 +203,7 @@ import Input from './subcomponents/Input.astro';
     }
   }
 </style>
-<script is:inline>
+<script is:inline data-astro-rerun>
   setup();
   function setup() {
     // Fonction de rappel pour l'intersection
