--- a/src/components/AgencyServices.astro
+++ b/src/components/AgencyServices.astro
@@ -53,10 +53,10 @@ const services: Service[] = [
   <SubTitle title="une communication qui fait sens !" />
   <div class="relative flex w-full flex-col items-center">
     <ul
-      class="grid mb-28 w-full max-w-[1800px] grid-cols-1 gap-x-40 gap-y-24 md:px-20 px-10 md:grid-cols-2 md:grid-rows-3  xl:grid-cols-3 xl:grid-rows-2"
+      class="grid mb-28 w-full max-w-[1800px] grid-cols-1 gap-x-40 gap-y-24 md:px-20 px-10 md:grid-cols-2 md:grid-rows-3 xl:grid-cols-3 xl:grid-rows-2"
     >
       {services.map((service) => <OneService {...service} maxWidth="328px" />)}
-  </div>
+    </ul>
     <div
       class="bottom-0 right-0 select-none z-10 flex w-full flex-col gap-5 bg-orange p-12 text-right font-larken text-3xl text-background md:absolute md:w-fit md:translate-y-1/3"
     >
@@ -76,20 +76,20 @@ const services: Service[] = [
   }
 </style>
 
-<script is:inline>
-setup();
-function setup() {
-  const textOrange = document.querySelectorAll('#text-orange');
+<script is:inline data-astro-rerun>
+  setup();
+  function setup() {
+    const textOrange = document.querySelectorAll('#text-orange');
 
-  //color first text in orange and then the others in white then after 1s, color the first in white and the second in orange and so on
-  let i = 0;
-  setInterval(() => {
-    textOrange[i].classList.remove('text-orange');
-    i++;
-    if (i === textOrange.length) {
-      i = 0;
-    }
-    textOrange[i].classList.add('text-orange');
-  }, 1000);
-}
+    //color first text in orange and then the others in white then after 1s, color the first in white and the second in orange and so on
+    let i = 0;
+    setInterval(() => {
+      textOrange[i].classList.remove('text-orange');
+      i++;
+      if (i === textOrange.length) {
+        i = 0;
+      }
+      textOrange[i].classList.add('text-orange');
+    }, 1000);
+  }
 </script>
