--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -7,6 +7,6 @@ import Main from "@/layouts/main.astro";
 ---
 
 <Main title="Hello, Astro!">
-  <h1>Hello, Astro!</h1>
-  <a href="/test">Test</a>
+  <h1>Hello, Astro test!</h1>
+  <a href="/">Test</a>
 </Main>
