--- a/src/pages/services/supports-imprimes.astro
+++ b/src/pages/services/supports-imprimes.astro
@@ -1,13 +1,13 @@
 ---
 import AgencyPresentation, { type PresentationProps } from '../../components/AgencyPresentation.astro';
 
+import Photo from '@assets/P.IMPPRIMÉS/Brochure Professionnelle-min.jpg';
+import AgencyContactForm from '../../components/AgencyContactForm.astro';
+import AgencyOneService, { type OneService } from '../../components/AgencyOneService.astro';
+import AgencySteps, { type AgencyStepsProps } from '../../components/AgencySteps.astro';
+import PhotosCarrousel from '../../components/PhotosCarrousel.astro';
 import TypingTitle from '../../components/TypingTitle.astro';
 import Layout from '../../layouts/Layout.astro';
-import Photo from '@assets/P.IMPPRIMÉS/Brochure Professionnelle-min.jpg';
-import AgencySteps, { type AgencyStepsProps } from '../../components/AgencySteps.astro';
-import AgencyOneService, { type OneService } from '../../components/AgencyOneService.astro';
-import AgencyContactForm from '../../components/AgencyContactForm.astro';
-import PhotosCarrousel from '../../components/PhotosCarrousel.astro';
 
 const color = '#9cb6be';
 const presentation: PresentationProps = {
@@ -123,12 +123,12 @@ const Steps: AgencyStepsProps = {
 };
 
 import Photo1 from '@assets/P.IMPPRIMÉS/Affiche-min.jpg';
+import Photo7 from '@assets/P.IMPPRIMÉS/Brochure Professionnelle-min.jpg';
 import Photo2 from '@assets/P.IMPPRIMÉS/Carte de Visite-min.jpg';
 import Photo3 from '@assets/P.IMPPRIMÉS/Dépliant-min.jpg';
 import Photo4 from '@assets/P.IMPPRIMÉS/Livre Recettes-min.jpg';
 import Photo5 from '@assets/P.IMPPRIMÉS/Mise en Page-min.jpg';
 import Photo6 from '@assets/P.IMPPRIMÉS/Signalétique-min.jpg';
-import Photo7 from '@assets/P.IMPPRIMÉS/Brochure Professionnelle-min.jpg';
 import AgencyContactUs from '@components/AgencyContactUs.astro';
 const PhotoCarrousel = [
   {
@@ -164,11 +164,14 @@ const PhotoCarrousel = [
 
 <Layout title="Supports Imprimés">
   <main>
-    <TypingTitle text="des solutions visuelles pour\f tous vos objectifs" />
-    <AgencyPresentation {...presentation} />
-    <AgencyOneService oneService={oneService} />
-    <AgencySteps {...Steps} />
-    <PhotosCarrousel photos={PhotoCarrousel} />
-    <AgencyContactUs />
+    <div class="flex h-72 w-full items-center justify-center px-8">
+      <div
+        class="font-larken md:text-3xl text-xl font-light text-center flex flex-col flex-wrap gap-y-4 justify-center"
+      >
+        <p>Maintenance en cours</p>
+        <p class="text-2xl">Merci de votre compréhension</p>
+        <a href="/" class="text-blue-500 hover:underline">Retour à l'accueil</a>
+      </div>
+    </div>
   </main>
 </Layout>
